<resources>
    <string name="app_name">Captis</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="signin_text">Sign In</string>
    <string name="new_account_create_text">Forgot Password</string>
    <string name="forget_password">Forgot Password ?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="welcome">WELCOME!</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_text">Enter the email address you use for Captis and we will help you create a new
        password.
    </string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit">Edit</string>
    <string name="personal_details">Fill in personal details</string>
    <string name="validate_yourself">Validate Yourself</string>
    <string name="my_linked_devices">My Linked Devices</string>
    <string name="logout">Logout</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="weight">Weight</string>
    <string name="diseases">Diseases</string>
    <string name="allergies">Allergies</string>
    <string name="signup">Sign Up</string>
    <string name="llm" translatable="false">androidx.recyclerview.widget.LinearLayoutManager</string>
    <string name="experience">Experience</string>
    <string name="something_wrong">Something went wrong. Please try again later!</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="in_progress">In progress</string>
    <string name="username">UserName</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="enter_mobile">Please verify your mobile number you want to register</string>
    <string name="hint_phone">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="verify_using_email">Verify using email instead</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification">Please enter verification code you have received on phone/email</string>
    <string name="hint_username">UserName</string>
    <string name="send_email">Send Email</string>
    <string name="register">Register</string>
    <string name="verify_code">Verify Code</string>
    <string name="trending">Trending</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="following_feed">Following Feeds</string>
    <string name="trending_feed">Trending Feed</string>

    <!--X-Box Demo string files-->
    <string name="response_display">Response</string>
    <string name="submit_display">Submit</string>
    <string name="http_method_prompt">HTTP Method</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="no_files">No files.</string>
    <string name="path_hint">e.g., me/skydrive</string>
    <string name="request_body">Request Body</string>
    <string name="request_body_hint">e.g., { \"name\": \"My new object\" }</string>
    <string name="skydrive_icon_description">An icon that represents the SkyDrive item.</string>
    <string name="no_contacts">No contacts.</string>
    <string name="no_skydrive_items">No SkyDrive items.</string>
    <string name="request_path">Request Path</string>
    <string name="request_method">Request Method</string>
    <string name="sign_out">Sign out</string>
    <string name="begin">Begin by hitting in the \"Sign in\" button.</string>
    <string name="AndroidSignInHelpLink">http://go.microsoft.com/fwlink/p/?LinkId=193157</string>
    <string name="unset_client_message_title">Please Get A Client Id</string>
    <string name="unset_client_message_body">This application is configured using a sample client id.  When you build your app, customize your own app profile.  Place your own client id in com.microsoft.live.sample.Config.CLIENT_ID. To obtain a Client Id, click the button above.</string>
    <string name="unset_client_message_positive">Navigate</string>
    <string name="unset_client_message_negitive">Cancel</string>

</resources>
