<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/trending"
            android:icon="@drawable/trending"
            android:title="@string/trending"/>

    <item
            android:id="@+id/following"
            android:icon="@drawable/trending"
            android:title="@string/following"/>

    <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search"/>

    <item
            android:id="@+id/notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications"/>

    <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"/>
</menu>