<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:id="@+id/main_layout"
        tools:context=".loginmodule.activities.RegisterActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fillViewport="true"
            android:scrollbarThumbVertical="@null"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="81dp">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="76dp" app:layout_constraintHorizontal_bias="0.497"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/curved_rectangle_empty"
                    android:hint="@string/username"
                    android:id="@+id/et_user_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    android:background="@drawable/curved_rectangle_empty"
                    android:ems="10"
                    android:id="@+id/et_email" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_user_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/curved_rectangle_empty"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:id="@+id/et_password" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_email"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/curved_rectangle_empty"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/et_confirm_password" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"/>
            <Button
                    android:id="@+id/btn_submit"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:background="@drawable/curved_rectangle_theme"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="18sp"
                    android:onClick="onSubmitClick"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>