<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingTop="23dp"
        tools:context=".loginmodule.activities.LoginActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarThumbVertical="@null"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_layout"
                tools:layout_editor_absoluteY="81dp">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="44dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:id="@+id/tv_welcome"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    android:layout_marginTop="72dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/et_user_name"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_username"
                    android:background="@drawable/curved_rectangle_empty"
                    android:drawableStart="@drawable/user"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@drawable/curved_rectangle_empty"
                    android:id="@+id/et_password"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_password"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_user_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_forget_password"
                    android:onClick="onForgetPasswordClick"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_password"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.963"/>
            <Button
                    android:text="@string/signin_text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/btn_login"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:background="@drawable/curved_rectangle_theme"
                    android:onClick="onLoginClick"
                    android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_forget_password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_signup"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:onClick="onSignUpClick"
                    android:textSize="16sp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintVertical_bias="0.087"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>