<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingTop="23dp"
        tools:context=".loginmodule.activities.ResetPasswordActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarThumbVertical="@null"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_layout">

            <ImageView
                    android:layout_width="186dp"
                    android:layout_height="38dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="56dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:id="@+id/textView2"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/et_otp"
                    android:hint="@string/enter_otp"
                    android:background="@drawable/curved_rectangle_empty"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintBottom_toTopOf="@+id/et_new_password"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/et_new_password"
                    android:background="@drawable/curved_rectangle_empty"
                    android:hint="@string/new_password"
                    app:layout_constraintTop_toBottomOf="@+id/et_otp"
                    app:layout_constraintBottom_toTopOf="@+id/et_confirm_password"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:id="@+id/et_confirm_password"
                    android:background="@drawable/curved_rectangle_empty"
                    app:layout_constraintTop_toBottomOf="@+id/et_new_password"
                    app:layout_constraintBottom_toTopOf="@+id/btn_submit"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:text="@string/submit"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/btn_submit"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:onClick="onSubmitClick"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/curved_rectangle_theme"
                    android:textColor="@android:color/white"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="84dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.441"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>