<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".loginmodule.activities.VerifyMobileActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fillViewport="true"
            android:scrollbarThumbVertical="@null"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_layout"
                tools:layout_editor_absoluteY="81dp">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:ems="10"
                    android:id="@+id/tv_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:drawablePadding="8dp"
                    android:text="@string/enter_verification"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/et_verification_code"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="text"
                    android:ems="10"
                    android:background="@drawable/curved_rectangle_empty"
                    android:id="@+id/et_verification_code"
                    android:drawablePadding="8dp"
                    android:layout_marginStart="8dp"
                    android:maxLength="12"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/verification_code"
                    android:fontFamily="sans-serif"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_reset"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text"
                    app:layout_constraintVertical_bias="0.627"/>
            <Button
                    android:text="@string/verify"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:id="@+id/btn_reset"
                    android:layout_marginStart="8dp"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:background="@drawable/curved_rectangle_theme"
                    android:onClick="onVerifyMobileClick"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="168dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_back_to_login"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_verification_code"/>
            <TextView
                    android:text="@string/verify_using_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_back_to_login"
                    android:layout_marginStart="8dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="onVerifyUsingEmailClick"
                    android:textColor="@color/colorAccent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="72dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:id="@+id/textView"
                    android:layout_marginTop="108dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>